--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Shop.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Shop.cshtml
@@ -23,7 +23,7 @@
     <div class="container">
         <div class="title-all text-left">
             <!--增加:Start當前分類-->
-            <h1>[當前分類]</h1>
+            <h id="categoryName">[當前分類]</h>
         </div>
         <!--增加:End當前分類-->
         <div class="row">
